update npm scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "vite build"
+    "preview": "vite preview",
+    "build": "vite build",
+    "deploy": "npm run build && git subtree push --prefix build origin gh-pages"
   },
   "keywords": [],
   "author": "",
